rappels js : typo

--- a/02-rappels-js/99-tp.md
+++ b/02-rappels-js/99-tp.md
@@ -134,19 +134,19 @@ Multiplication(10,20) = 200
     * A ce stade, la console devrait afficher le résultat suivant :
 
 ```
-resultat1 ## 30
-resultat2 ## 30
-resultat3 ## 200
-Somme [ nb1 ## 20 nb2 ##  40 ] ## 60
-Multiplication [ nb1 ## 10 nb2 ##  20 ] ## 200
-Soustraction [ nb1 ## 15 nb2 ##  5 ] ## 10
+resultat1 = 30
+resultat2 = 30
+resultat3 = 200
+Somme(0,40) = 60
+Multiplication(10,20) = 200
+Soustraction(15,5) = 10
 ```
 
 ## TP 02 - Tableaux
 
 * Créer un fichier 02.tableaux.js.
 
-```js
+```
 /rappels-es5
     01.function.js
     02.tableau.js
@@ -186,18 +186,18 @@ auMoinsUneVilleAvecUnTiret = true
 * A l'aide de la fonction `filter()`, créer une variable `villesSansTiretSansEspace` qui contient un tableau dont les villes n'ont ni tiret, ni espace.
 
 ```
-villesSansTiretSansEspace## [ 'nantes', 'paris', 'angers' ]
-----
+villesSansTiretSansEspace = [ 'nantes', 'paris', 'angers' ]
+```
 
 ### Chainer les Fonctions
 
 * A partir du tableau `villes`, construire un tableau dont :
 
-** la dernière lettre du nom est `'s'`
-** les noms des villes sont en majuscules
+    * la dernière lettre du nom est `'s'`
+    * les noms des villes sont en majuscules
 
-----
-villesMajusculeSeTerminantParS ## [ 'NANTES', 'PARIS', 'ANGERS', 'LE MANS' ]
+```
+villesMajusculeSeTerminantParS = [ 'NANTES', 'PARIS', 'ANGERS', 'LE MANS' ]
 ```
 
 
@@ -206,36 +206,35 @@ villesMajusculeSeTerminantParS ## [ 'NANTES', 'PARIS', 'ANGERS', 'LE MANS' ]
 * Créer un fichier `03.poo.js`.
 
 ```
-/formation-frontend
-    /01-rappels-es5
-        01.function.js
-        02.tableau.js
-        03.poo.js
+/rappels-es5
+    01.function.js
+    02.tableau.js
+    03.poo.js
 ```
 
 ### Fonction constructeur
 
 * Créer une fonction constructeur `Personne` qui permet de créer un objet ayant les caractéristiques suivantes :
-** Un attribut `nom`.
-** Un attribut `prenom`.
-** Un attribut `pseudo`.
-** Une méthode `getNomComplet` qui retourne une chaine de caractères contenant le nom, le prénom et le pseudo.
+    * Un attribut `nom`.
+    * Un attribut `prenom`.
+    * Un attribut `pseudo`.
+    * Une méthode `getNomComplet` qui retourne une chaine de caractères contenant le nom, le prénom et le pseudo.
 
 * Créer un objet `jules` en utilisant la fonction constructeur `Personne` avec :
-** Le prénom `Jules`.
-** Le nom `LEMAIRE`.
-** Le pseudo `jules77`.
+    * Le prénom `Jules`.
+    * Le nom `LEMAIRE`.
+    * Le pseudo `jules77`.
 
 * Créer un objet `paul` en utilisant la fonction constructeur `Personne` avec :
-** Le prénom `Paul`.
-** Le nom `LEMAIRE`.
-** Le pseudo `paul44`.
+    * Le prénom `Paul`.
+    * Le nom `LEMAIRE`.
+    * Le pseudo `paul44`.
 
 * Afficher dans la console :
-** Le nom de l'objet `jules`.
-** Le prénom de l'objet `jules`.
-** Le pseudo de l'objet `jules`.
-** Le nom complet de l'objet `jules`.
+    * Le nom de l'objet `jules`.
+    * Le prénom de l'objet `jules`.
+    * Le pseudo de l'objet `jules`.
+    * Le nom complet de l'objet `jules`.
 
 * Répéter l'affichage précédent pour l'objet `paul` (créer une fonction réutilisable `afficherPersonne`).
 
@@ -247,18 +246,18 @@ villesMajusculeSeTerminantParS ## [ 'NANTES', 'PARIS', 'ANGERS', 'LE MANS' ]
 
 * Afficher dans la console :
 
-** Le nom complet de l'objet `jules`.
+    * Le nom complet de l'objet `jules`.
 
 * Tester.
 
 ### Ajouter une propriété à Personne
 
 * Afficher la propriété `age` de l'objet `jules`.
-** Vérifier que la valeur est `undefined`.
+    * Vérifier que la valeur est `undefined`.
 
 * Ajouter la propriété `age` à la structure `Personne` avec la valeur par défaut `NON RENSEIGNE`.
 
-** Utiliser la propriété `prototype`.
+    * Utiliser la propriété `prototype`.
 
 * Afficher la propriété `age` de l'objet `jules` dans la console.
 
@@ -273,11 +272,11 @@ villesMajusculeSeTerminantParS ## [ 'NANTES', 'PARIS', 'ANGERS', 'LE MANS' ]
 ### Ajouter une méthode à Personne
 
 * Ajouter la méthode `getInitiales` à la structure `Personne` qui retourne une chaine de caractères composée de la première lettre du prénom et de la première lettre du nom.
-** En javascript, pour récupérer un caractère d'une chaine de caractères, utiliser la fonction `charAt`. Exemple :
+    * En javascript, pour récupérer un caractère d'une chaine de caractères, utiliser la fonction `charAt`. Exemple :
 
 ```js
-"Jules".charAt(0) ## "J"
-"Jules".charAt(3) ## "e"
+"Jules".charAt(0) == "J"
+"Jules".charAt(3) == "e"
 ```
 
 * Afficher dans la console les initiales de l'objet `jules`.
@@ -287,10 +286,10 @@ villesMajusculeSeTerminantParS ## [ 'NANTES', 'PARIS', 'ANGERS', 'LE MANS' ]
 ### Objet sans fonction constructeur
 
 * Créer un objet `robert` sans fonction constructeur avec :
-** L'attribut `prenom` qui vaut `Robert`.
-** L'attribut `nom` qui vaut `LEPREFET`.
-** L'attribut `pseudo` qui vaut `robert77`.
-** La méthode `getNomComplet` qui retourne une chaine de caractères contenant le nom, le prénom et le pseudo.
+    * L'attribut `prenom` qui vaut `Robert`.
+    * L'attribut `nom` qui vaut `LEPREFET`.
+    * L'attribut `pseudo` qui vaut `robert77`.
+    * La méthode `getNomComplet` qui retourne une chaine de caractères contenant le nom, le prénom et le pseudo.
 
 * Réutiliser la fonction `afficherPersonne` pour afficher les informations de l'objet `robert`.
 
@@ -298,11 +297,11 @@ villesMajusculeSeTerminantParS ## [ 'NANTES', 'PARIS', 'ANGERS', 'LE MANS' ]
 
 ### Héritage via une fonction constructeur
 * Créer une fonction constructeur `Client` qui possède les mêmes caractéristiques que `Personne` et qui contient en plus :
-** Une propriété `numeroClient`.
-** Une fonction `getInfos` qui retourne :
-*** Le numéro du client.
-*** Le nom du client.
-*** Le prenom du client.
+    * Une propriété `numeroClient`.
+    * Une fonction `getInfos` qui retourne :
+        * Le numéro du client.
+        * Le nom du client.
+        * Le prenom du client.
 
 * Utiliser `call` avec la fonction `Personne` (`Personne.call(…)`).
 
@@ -312,12 +311,12 @@ Aide :
 
 Par exemple :
 
-```
+```js
 
-var robert ## { nom: 'Robert'};
+var robert = { nom: 'Robert'};
 
 function afficherNom(texte) {
-    console.log('Nom', this.nom, texte); // this ## robert
+    console.log('Nom', this.nom, texte); // this = robert
 }
 
 afficherNom.call(robert, 'untexte');
