rappels js : typo

--- a/02-rappels-js/99-tp.md
+++ b/02-rappels-js/99-tp.md
@@ -2,7 +2,7 @@
 
 > Prérequis : Installer NodeJS.
 
-## TP 01 - Les fonctions
+## Partie 1 - Les fonctions
 
 * Créer un fork du dépôt `rappels-es5`et récupérer ce dépôt sur votre machine.
 
@@ -23,7 +23,7 @@ console.log("01 - Fonctions");
 
 * Tester avec Node via la commande :
 
-```js
+```
 cd rappels-es5
 node 01.function.js
 ```
@@ -142,7 +142,7 @@ Multiplication(10,20) = 200
 Soustraction(15,5) = 10
 ```
 
-## TP 02 - Tableaux
+## Partie 2 - Les tableaux
 
 * Créer un fichier 02.tableaux.js.
 
@@ -201,7 +201,7 @@ villesMajusculeSeTerminantParS = [ 'NANTES', 'PARIS', 'ANGERS', 'LE MANS' ]
 ```
 
 
-## TP 03 - Programmation orientée objet
+## Partie 3 - Programmation orientée objet
 
 * Créer un fichier `03.poo.js`.
 
